Fixing potential crasher introduced by the original fix for bug 150087. The weak docshell pointer in the navigator object must be cleared when it's released. r=sicking@netscape.com, sr=alecf@netscape.com