dom/src/base/nsGlobalWindow.cpp
@@ -378,9 +378,14 @@ GlobalWindowImpl::SetNewDocument(nsIDOMDocument* aDocument,
     ::JS_ClearWatchPointsForObject((JSContext *)mContext->GetNativeContext(),
                                    mJSObject);
 
-  // Release the navigator object so that it will be recreated for the new document
-  // The plugins or mime types array may have changed. See bug 150087
-  NS_IF_RELEASE(mNavigator);
+  // Release the navigator object so that it will be recreated for the
+  // new document The plugins or mime types array may have
+  // changed. See bug 150087
+  if (mNavigator) {
+    mNavigator->SetDocShell(nsnull);
+
+    NS_RELEASE(mNavigator);
+  }
 
   if (mFirstDocumentLoad) {
     if (aDocument) {
